# mail_monit

./: .env  Cargo.toml  README.md
src/: adapter.rs  event.rs  ferris_event.rs  ferris_mail.rs  main.rs  sendgrid_mail.rs  service.rs
