[package]
name = "mail_monit"
version = "0.1.0"
authors = ["harinimaniam <harinimaniam2001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = { version = "2.0", features = ["openssl"] }
actix-rt = "1.0"
actix-cors = "0.2.0"
futures = "0.3.5"
actix-multipart = "0.2.0"
actix-files = "0.2.2"
dotenv = "0.9.0"
env_logger = "0.6"
serde = "1.0.34"
serde_json = "1.0"
chrono = "0.4.11"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
sanitize-filename = "0.2.1"
ics = "0.4"
base64 = "0.13.0"
